fix information-header z-index

--- a/src/components/Menu/style.css
+++ b/src/components/Menu/style.css
@@ -7,7 +7,7 @@
 .patinha2,
 .patinha3 {
   position: absolute;
-  z-index: 2; /* Ensure icons are above forma-cabecalho */
+  z-index: 2; 
 }
 
 .patinha1 {
@@ -36,7 +36,7 @@
   position: relative;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 3; /* Ensure logo is above forma-cabecalho */
+  z-index: 3;
 }
 
 .container {
@@ -48,7 +48,7 @@
   margin-right: 0;
   margin-left: auto;
   align-items: flex-end;
-  z-index: 1;
+  z-index: 3;
 }
 
 .forma-cabecalho {
